--- a/hw/drivers/ipc_nrf5340/pkg.yml
+++ b/hw/drivers/ipc_nrf5340/pkg.yml
@@ -32,3 +32,6 @@ pkg.deps:
 pkg.init:
     ipc_nrf5340_init: 'MYNEWT_VAL(IPC_NRF5340_SYSINIT_STAGE)'
     ipc_nrf5340_netcore_init: 'MYNEWT_VAL(IPC_NRF5340_NETCORE_SYSINIT_STAGE)'
+
+pkg.link_tables:
+    - shm_descriptor
