Update LICENSE and rat excludes

--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -46,9 +46,8 @@ jobs:
           fetch-depth: 0
       - name: Install Dependencies
         run: |
-             wget https://dlcdn.apache.org//creadur/apache-rat-0.15/apache-rat-0.15-bin.tar.gz
-             tar zxf apache-rat-0.15-bin.tar.gz apache-rat-0.15/apache-rat-0.15.jar
-             mv apache-rat-0.15/apache-rat-0.15.jar apache-rat.jar
+             wget https://repository.apache.org/content/repositories/snapshots/org/apache/rat/apache-rat/0.16-SNAPSHOT/apache-rat-0.16-20230807.065048-315.jar
+             mv apache-rat-0.16-20230807.065048-315.jar apache-rat.jar
       - name: check licensing
         run: |
              .github/check_license.py
