--- a/repository.yml
+++ b/repository.yml
@@ -39,6 +39,7 @@ repo.versions:
     "1.8.0": "mynewt_1_8_0_tag"
     "1.9.0": "mynewt_1_9_0_tag"
     "1.10.0": "mynewt_1_10_0_tag"
+    "1.11.0": "mynewt_1_11_0_tag"
 
     "0-latest": "1.10.0"
     "1-latest": "1.10.0"
@@ -57,6 +58,7 @@ repo.versions:
     "1.8-latest": "1.8.0"
     "1.9-latest": "1.9.0"
     "1.10-latest": "1.10.0"
+    "1.11-latest": "1.11.0"
 
 repo.newt_compatibility:
     # Allow all versions for 0.0.0.  This is a workaround to prevent a warning
@@ -75,6 +77,9 @@ repo.newt_compatibility:
     # Core 1.8.0+ requires newt 1.8.0+ (feature: version.yml not needed)
     # Core 1.9.0+ requires newt 1.9.0+ (feature: sysval restrictions relaxed)
     # Core 1.10.0+ requires newt 1.10.0+ (feature: const sysval)
+    # Core 1.11.0+ requires newt 1.11.0+ (feature: external modules)
+    1.11.0:
+        1.11.0: good
     1.10.0:
         1.10.0: good
     1.9.0:
@@ -113,6 +118,7 @@ repo.deps:
             mynewt_1_8_0_tag: 1.3.0
             mynewt_1_9_0_tag: 1.4.0
             mynewt_1_10_0_tag: 1.5.0
+            mynewt_1_11_0_tag: 1.6.0
 
     mcuboot:
         type: github
@@ -125,6 +131,7 @@ repo.deps:
             mynewt_1_8_0_tag: 1.5.0
             mynewt_1_9_0_tag: 1.7.2
             mynewt_1_10_0_tag: 1.7.2
+            mynewt_1_11_0_tag: 1.10.0
 
     apache-mynewt-mcumgr:
         type: github
@@ -135,3 +142,4 @@ repo.deps:
             mynewt_1_8_0_tag: 0.1.0
             mynewt_1_9_0_tag: 0.2.0
             mynewt_1_10_0_tag: 0.3.0
+            mynewt_1_11_0_tag: 0.4.0
