tinyusb: Add TinyUSB sdk package with repository
With this change there is no need to add TinyUSB
to project.yml

--- a/hw/usb/tinyusb/da146xx/pkg.yml
+++ b/hw/usb/tinyusb/da146xx/pkg.yml
@@ -30,4 +30,4 @@ pkg.apis:
 
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
-    - "@tinyusb/tinyusb"
+    - "@apache-mynewt-core/hw/usb/tinyusb"
