lvgl: Display driver optimizations
This adds several syscfg values that tweak LVGL build.
LV_DISP_DRAW_BUF_LINES (default 10) specifies buffer size in lines.
Increasing this number can reduce drawing time but uses more memory.
LV_DISP_DOUBLE_BUFFER - when set, allows display driver to draw
pixel asynchronously (with DMA). Currently no driver utilizes this.
LV_DISP_X_ALIGN/LV_DISP_Y_ALIGN - can specify minimum pixel alignment
required by display driver. Currently only DA1469X LCD driver requires
LV_DISP_X_ALIGN to be 1. Increasing this number forces LVGL to draw more
pixels that library needs.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/drivers/display/lvgl/syscfg.yml
+++ b/hw/drivers/display/lvgl/syscfg.yml
@@ -164,3 +164,35 @@ syscfg.defs:
     LV_USE_DEMO_WIDGETS:
         description: Enable Widgets demo.
         value: 1
+
+    LV_MEM_CUSTOM:
+        description: >
+            If set to 1 malloc/free/realloc is used by lvgl library instead of
+            lv_mem_free/lv_mem_alloc.
+        value: 0
+    LV_MEM_SIZE:
+        description: >
+            Size of the memory available for `lv_malloc()` in bytes.
+        value: 49152
+    LV_DISP_DRAW_BUF_LINES:
+        description: >
+            Number of line for buffer usd for drawing portion of the screen.
+        value: 10
+    LV_DISP_DOUBLE_BUFFER:
+        description: >
+            Enable double buffer when LCD interface has asynchronous write more.
+            It should be set to 1 one DMA is used for transferring color data to
+            display.
+        value: 0
+    LV_DISP_X_ALIGN:
+        description: >
+            Display driver X alignment requirement in bits.
+            If set to 0 display driver can draw pixels at any point.
+            If set to value grater than 0 X pixel coordinates will be rounded.
+        value: 0
+    LV_DISP_Y_ALIGN:
+        description: >
+            Display driver Y alignment requirement in bits.
+            If set to 0 display driver can draw pixels at any point.
+            If set to value grater than 0 X pixel coordinates will be rounded.
+        value: 0
