lvgl: Add backlight pin active level
This adds way to define active level of backlight pin that
will be used during driver initialization.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/drivers/display/lcd_itf/syscfg.yml
+++ b/hw/drivers/display/lcd_itf/syscfg.yml
@@ -36,6 +36,9 @@ syscfg.defs:
     LCD_BL_PIN:
         description: LCD backlight pin.
         value: -1
+    LCD_BL_PIN_ACTIVE_LEVEL:
+        description: Value for LCD_BL_PIN to turn backlight on.
+        value: 1
     LCD_RESET_PIN:
         description: LCD command/data pin for SPI or parallel port.
         value: -1
