--- a/targets/coverity/btshell_nrf52840_coverity2/syscfg.yml
+++ b/targets/coverity/btshell_nrf52840_coverity2/syscfg.yml
@@ -33,6 +33,7 @@ syscfg.vals:
     BLE_TRANSPORT_EVT_DISCARDABLE_COUNT: 257
     BLE_HS_DEBUG: 1
     BLE_L2CAP_COC_MAX_NUM: 2
+    BLE_L2CAP_ENHANCED_COC: 1
     BLE_LL_CFG_FEAT_LE_2M_PHY: 1
     BLE_LL_CFG_FEAT_LE_CODED_PHY: 1
     BLE_LL_CFG_FEAT_LL_PRIVACY: 1
