lvgl: Add i2c interface driver
Driver for display that have I2C interface (SDD1306)

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/drivers/display/lcd_itf/itf_i2c/pkg.yml
+++ b/hw/drivers/display/lcd_itf/itf_i2c/pkg.yml
@@ -17,21 +17,13 @@
 # under the License.
 #
 
-pkg.name: hw/drivers/display/lcd_itf
-pkg.description: LCD
+pkg.name: hw/drivers/display/lcd_itf/itf_i2c
+pkg.description: LCD Standard I2C interface
 pkg.keywords:
     - display
-    - LCD
 
-pkg.req_apis:
+pkg.apis:
     - lcd_interface
 
-pkg.deps.'LCD_ITF == "spi"':
-    - "@apache-mynewt-core/hw/drivers/display/lcd_itf/itf_spi"
-pkg.deps.'LCD_ITF == "i2c"':
-    - "@apache-mynewt-core/hw/drivers/display/lcd_itf/itf_i2c"
-pkg.deps.'LCD_ITF == "8080_II_8_bit"':
-    - "@apache-mynewt-core/hw/drivers/display/lcd_itf/itf_8080"
-pkg.deps.'LCD_ITF == "8080_II_16_bit"':
-    - "@apache-mynewt-core/hw/drivers/display/lcd_itf/itf_8080"
-
+pkg.deps:
+#    - "@apache-mynewt-core/hw/bus/drivers/i2c_common"
