lvgl: Add driver for SSD1306
This adds driver for SSD1306 display controller.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/drivers/display/lvgl/pkg.yml
+++ b/hw/drivers/display/lvgl/pkg.yml
@@ -58,6 +58,8 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/hw/drivers/display/lcd_itf"
 
+pkg.deps.LVGL_SSD1306:
+    - "@apache-mynewt-core/hw/drivers/display/lvgl/oled/ssd1306"
 pkg.deps.LVGL_GC9A01:
     - "@apache-mynewt-core/hw/drivers/display/lvgl/tft/gc9a01"
 pkg.deps.LVGL_ILI9341:
