--- a/hw/usb/tinyusb/cdc_console/syscfg.yml
+++ b/hw/usb/tinyusb/cdc_console/syscfg.yml
@@ -22,7 +22,12 @@ syscfg.defs:
         description: String for CDC interface
         value: '"Mynewt console"'
 
-syscfg.vals:
+syscfg.defs:
+    CONSOLE_USB_CDC_SYSINIT_STAGE:
+        description: >
+          Initialize USB CDC Console at the specified sysinit level
+        value: 502
 
 syscfg.restrictions:
     - "USBD_CDC"
+    - CONSOLE_USB_CDC_SYSINIT_STAGE > USBD_SYSINIT_STAGE
