mcu/nordic: Fix restrictions for LF clock
LFCLK is required to be set to non-LFRC only if Bluetooth controller
is enabled. Otherwise it may or maynot be set to any value, depending
on application and bootloader configuration.

--- a/hw/mcu/nordic/nrf52xxx/syscfg.yml
+++ b/hw/mcu/nordic/nrf52xxx/syscfg.yml
@@ -59,7 +59,7 @@ syscfg.defs:
             Selected source for low frequency clock (LFCLK).
         value:
         restrictions:
-            - $notnull
+            - '!BLE_CONTROLLER || (MCU_LFCLK_SOURCE != "LFRC")'
         choices:
             - LFRC      # 32.768 kHz RC oscillator
             - LFXO      # 32.768 kHz crystal oscillator
@@ -503,5 +503,3 @@ syscfg.restrictions:
     - "!UART_1 || (UART_1_PIN_TX && UART_1_PIN_RX)"
     - "(OS_TICKS_PER_SEC == 128 || OS_TICKS_PER_SEC == 256 || OS_TICKS_PER_SEC == 512 || OS_TICKS_PER_SEC == 1024)"
 
-syscfg.restrictions.BLE_CONTROLLER:
-    - 'MCU_LFCLK_SOURCE != "LFRC"'
