--- a/hw/mcu/nordic/nrf5340_net/syscfg.yml
+++ b/hw/mcu/nordic/nrf5340_net/syscfg.yml
@@ -43,7 +43,7 @@ syscfg.defs:
             Selected source for low frequency clock (LFCLK).
         value:
         restrictions:
-            - $notnull
+            - '!BLE_CONTROLLER || (MCU_LFCLK_SOURCE != "LFRC")'
         choices:
             - LFRC      # 32.768 kHz RC oscillator
             - LFXO      # 32.768 kHz crystal oscillator
@@ -160,6 +160,3 @@ syscfg.vals:
 
 syscfg.restrictions:
     - "!UART_0 || (UART_0_PIN_TX && UART_0_PIN_RX)"
-
-syscfg.restrictions.BLE_CONTROLLER:
-    - 'MCU_LFCLK_SOURCE != "LFRC"'
