--- a/hw/mcu/nordic/nrf51xxx/syscfg.yml
+++ b/hw/mcu/nordic/nrf51xxx/syscfg.yml
@@ -102,7 +102,7 @@ syscfg.defs:
             Selected source for low frequency clock (LFCLK).
         value:
         restrictions:
-            - $notnull
+            - '!BLE_CONTROLLER || (MCU_LFCLK_SOURCE != "LFRC")'
         choices:
             - LFRC      # 32.768 kHz RC oscillator
             - LFXO      # 32.768 kHz crystal oscillator
@@ -145,6 +145,3 @@ syscfg.vals.XTAL_RC:
     MCU_LFCLK_SOURCE: LFRC
 syscfg.vals.XTAL_32768_SYNTH:
     MCU_LFCLK_SOURCE: LFSYNTH
-
-syscfg.restrictions.BLE_CONTROLLER:
-    - 'MCU_LFCLK_SOURCE != "LFRC"'
