bsp/pca10121: Switch to nrfjprog
This changes default flasher to nrfjprog for
pca10121 and pca10121_net.

jlink can still be selected with syscfg value
MYNEWT_DOWNLOADER: jlink

--- a/hw/bsp/nordic_pca10121/bsp.yml
+++ b/hw/bsp/nordic_pca10121/bsp.yml
@@ -28,7 +28,7 @@ bsp.linkerscript:
 bsp.linkerscript.BOOT_LOADER.OVERWRITE:
     - "hw/bsp/nordic_pca10121/boot-nrf5340.ld"
     - "@apache-mynewt-core/hw/mcu/nordic/nrf5340/nrf5340.ld"
-bsp.downloadscript: "hw/bsp/nordic_pca10121/download.sh"
+bsp.downloadscript: "hw/scripts/download.sh"
 bsp.debugscript: "hw/bsp/nordic_pca10121/debug.sh"
 
 bsp.flash_map:
