--- a/hw/bsp/nordic_pca10121/syscfg.yml
+++ b/hw/bsp/nordic_pca10121/syscfg.yml
@@ -96,6 +96,11 @@ syscfg.vals:
     QSPI_XIP_OFFSET: 0x10000000
     FLASH_MAP_SYSINIT_STAGE: 15
 
+    # Flasher parameters
+    MYNEWT_DOWNLOADER: nrfjprog
+    JLINK_TARGET: NRF5340_XXAA_APP
+    MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x0
+
 syscfg.vals.!BOOT_LOADER:
     MCU_LFCLK_SOURCE: LFXO
     MCU_LFCLK_XO_INTCAP: c9pf
