--- a/hw/bsp/nordic_pca10121/net/pkg.yml
+++ b/hw/bsp/nordic_pca10121/net/pkg.yml
@@ -31,6 +31,7 @@ pkg.cflags:
     - '-DNRF5340_XXAA_NETWORK'
 
 pkg.deps:
+    - "@apache-mynewt-core/hw/scripts"
     - "@apache-mynewt-core/hw/mcu/nordic/nrf5340_net"
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/sys/flash_map"
