lvgl/ssd1306: Add support for page addressing
Only horizontal addressing mode was supported.
There are many variants that only work with page
addressing mode.

Now addressing mode can be changed to page (which
is less efficient from I2C point of view).

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/drivers/display/lvgl/oled/ssd1306/syscfg.yml
+++ b/hw/drivers/display/lvgl/oled/ssd1306/syscfg.yml
@@ -17,6 +17,12 @@
 #
 
 syscfg.defs:
+    SSD1306_ADDRESSING_MODE:
+        description: Addressing mode.
+        choices:
+            - horizontal
+            - page
+        value: horizontal
 
 syscfg.vals:
     LVGL_DISPLAY_HORIZONTAL_RESOLUTION: 128
