--- a/.github/workflows/build_blinky.yml
+++ b/.github/workflows/build_blinky.yml
@@ -42,6 +42,11 @@ jobs:
         run: |
              sudo apt-get update
              sudo apt-get install -y gcc-multilib
+      - name: Install GNU sed
+        if: matrix.os == 'macos-latest'
+        run: |
+             brew install gnu-sed
+             echo "$(brew --prefix)/opt/gnu-sed/libexec/gnubin" >> $GITHUB_PATH
       - name: Install newt
         run: |
              go version
@@ -53,8 +58,9 @@ jobs:
              cp -f .github/project.yml build/project.yml
              cd build
              newt upgrade --shallow=1
-             rm -rf repos/apache-mynewt-core
-             git clone .. repos/apache-mynewt-core
+             git -C repos/apache-mynewt-core fetch origin $GITHUB_SHA
+             sed -i "s/0.0.0/$GITHUB_SHA-commit/g" project.yml
+             newt upgrade --shallow=1
              cd ..
       - name: Build Blinky
         shell: bash
