--- a/.github/workflows/build_targets.yml
+++ b/.github/workflows/build_targets.yml
@@ -37,6 +37,11 @@ jobs:
       - uses: carlosperate/arm-none-eabi-gcc-action@48db4484a55750df7a0ccca63347fcdea6534d78
         with:
           release: '12.2.Rel1'
+      - name: Install GNU sed
+        if: matrix.os == 'macos-latest'
+        run: |
+             brew install gnu-sed
+             echo "$(brew --prefix)/opt/gnu-sed/libexec/gnubin" >> $GITHUB_PATH
       - name: Install newt
         run: |
              go version
@@ -48,9 +53,10 @@ jobs:
              cp -f .github/project.yml build/project.yml
              cd build
              newt upgrade --shallow=1
+             git -C repos/apache-mynewt-core fetch origin $GITHUB_SHA
+             sed -i "s/0.0.0/$GITHUB_SHA-commit/g" project.yml
+             newt upgrade --shallow=1
              rm -rf targets
-             rm -rf repos/apache-mynewt-core
-             git clone .. repos/apache-mynewt-core
              cd ..
       - name: Build targets
         shell: bash
