hw/pwm_nrf52: Update nrfx to version 3.3.0
- NRFX_PWM_PIN_NOT_USED change to NRF_PWM_PIN_NOT_CONNECTED.
- Pin inversion update to match NRFX.
- NRF91 now have syscfg values for PWM

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/nordic/nrf91xx/syscfg.yml
+++ b/hw/mcu/nordic/nrf91xx/syscfg.yml
@@ -70,6 +70,19 @@ syscfg.defs:
         value: 0
 
 # MCU peripherals definitions
+    PWM_0:
+        description: 'Enable PWM 0'
+        value: 0
+    PWM_1:
+        description: 'Enable PWM 1'
+        value: 0
+    PWM_2:
+        description: 'Enable PWM 2'
+        value: 0
+    PWM_3:
+        description: 'Enable PWM 3'
+        value: 0
+
     I2C_0:
         description: 'Enable nRF91xx I2C 0'
         value: 0
