hw/bsp: Update boards to nrfx 3.3.0
Now nrfx_config.h uses more specific selector for Nordic MCUs.
This adds definition NRF5xxxx_XXAA to all affected BSPs.
Definition NRF52/1 is still in place in case code other then NRFX
needs it.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/bbc_microbit/pkg.yml
+++ b/hw/bsp/bbc_microbit/pkg.yml
@@ -28,6 +28,7 @@ pkg.keywords:
 
 pkg.cflags:
     - '-DNRF51'
+    - '-DNRF51822_XXAA'
 
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf51xxx"
