--- a/hw/bsp/nordic_pca10028-16k/pkg.yml
+++ b/hw/bsp/nordic_pca10028-16k/pkg.yml
@@ -30,6 +30,7 @@ pkg.keywords:
 
 pkg.cflags:
     - '-DNRF51'
+    - '-DNRF51422_XXAA'
 
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf51xxx"
