--- a/hw/bsp/bmd200/pkg.yml
+++ b/hw/bsp/bmd200/pkg.yml
@@ -29,6 +29,7 @@ pkg.keywords:
 
 pkg.cflags:
     - '-DNRF51'
+    - '-DNRF51822_XXAA'
 
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf51xxx"
