cmsis: Use external repo for CMSIS
Files imported from CMSIS repository were stored in mynewt-core.
To make future changes easier external repository is now referenced.
mynewt_cm0_vectab.h was moved from ext to include folder
as it was not part of externaly imported content.

This will make it easier in the future to support additional cores
byt just changing version of CMSIS.

For now version 5.3.0 is still used

--- a/hw/cmsis-core/pkg.yml
+++ b/hw/cmsis-core/pkg.yml
@@ -24,4 +24,15 @@ pkg.homepage: "http://www.keil.com/pack/doc/CMSIS/Core/html/index.html"
 pkg.keywords:
     - cmsis
     - core
+
 pkg.type: sdk
+
+pkg.include_dirs:
+    - "@arm-CMSIS_5/CMSIS/Core/Include"
+
+repository.arm-CMSIS_5:
+    type: github
+    vers: 5.3.0-commit
+    branch: master
+    user: ARM-software
+    repo: CMSIS_5
