--- a/hw/usb/tinyusb/shell/pkg.yml
+++ b/hw/usb/tinyusb/shell/pkg.yml
@@ -17,24 +17,17 @@
 # under the License.
 #
 
-pkg.name: hw/usb/tinyusb/msc_fat_view
-pkg.description: USB MSC protocol that exposes virtual FAT disk
+pkg.name: hw/usb/tinyusb/shell
+pkg.description: Shell for TinyUSB
 pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
-    - msc
     - usb
+    - tinyusb
 
 pkg.deps:
-    - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/usb/tinyusb"
-    - "@apache-mynewt-core/mgmt/imgmgr"
-    - "@apache-mynewt-core/sys/coredump"
-    - "@mcuboot/boot/bootutil"
 
-pkg.init.'(!BOOT_LOADER && TINYUSB_AUTO_START!=0)':
-    msc_fat_view_pkg_init: $before:tinyusb_start
-
-pkg.init.'!BOOT_LOADER && MSC_FAT_VIEW_COREDUMP_FILES':
-    msc_fat_view_coredump_pkg_init: $before:msc_fat_view_pkg_init
+pkg.init:
+    tinyusb_cli_init: 'MYNEWT_VAL(SHELL_SYSINIT_STAGE) + 1'
