--- a/hw/bsp/fanstel-ev-bt840/pkg.yml
+++ b/hw/bsp/fanstel-ev-bt840/pkg.yml
@@ -36,3 +36,4 @@ pkg.deps:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf52xxx"
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/sys/flash_map"
+    - "@apache-mynewt-core/boot/startup"
