--- a/hw/bsp/nordic_pca10056/syscfg.yml
+++ b/hw/bsp/nordic_pca10056/syscfg.yml
@@ -31,6 +31,9 @@ syscfg.vals:
     # Disable access port, enable debugger
     MCU_ACCESS_PORT_PROTECTION: disable
 
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 0x40000
+
     # Set default pins for peripherals
     UART_0_PIN_TX: 6
     UART_0_PIN_RX: 8
