--- a/hw/bsp/nordic_pca10059/syscfg.yml
+++ b/hw/bsp/nordic_pca10059/syscfg.yml
@@ -29,6 +29,9 @@ syscfg.vals:
     MCU_TARGET: nRF52840
     MCU_COMMON_STARTUP: 1
 
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 0x20000
+
     UART_0: 0
 
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
