--- a/hw/bsp/ruuvitag_rev_b/syscfg.yml
+++ b/hw/bsp/ruuvitag_rev_b/syscfg.yml
@@ -60,6 +60,9 @@ syscfg.vals:
     MCU_TARGET: nRF52832
     MCU_COMMON_STARTUP: 1
 
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 0x10000
+
     # Set default pins for peripherals
     # Latest revisions have testpoints instead of dedicated UART pins,
     # we can use them instead
