crypto/mbedtls: Suppress unknown warning options for clang
-Wno-maybe-uninitialized flag is not supported by clang.
This suppresses warning related to this.

--- a/crypto/mbedtls/pkg.yml
+++ b/crypto/mbedtls/pkg.yml
@@ -29,6 +29,7 @@ pkg.type: sdk
 pkg.cflags:
     - '-DMBEDTLS_USER_CONFIG_FILE=<mbedtls/config_mynewt.h>'
     - -Wno-maybe-uninitialized
+    - -Wno-unknown-warning-option
 pkg.cflags.TEST: -DTEST
 
 pkg.include_dirs:
