compiler/sim: Switch off forcing 32-bit code generation
-m32 flag is removed. Now if the machine on which the code is compiled
is capable of running 64-bit code the generated code will be 64-bit.

--- a/compiler/sim/compiler.yml
+++ b/compiler/sim/compiler.yml
@@ -25,7 +25,7 @@ compiler.path.archive: "ar"
 compiler.path.objdump: "objdump"
 compiler.path.objsize: "size"
 compiler.path.objcopy: "objcopy"
-compiler.flags.base: [-m32, -Wall, -Werror, -ggdb, -ffunction-sections, -fdata-sections, -fno-common]
+compiler.flags.base: [-Wall, -Werror, -ggdb, -ffunction-sections, -fdata-sections, -fno-common]
 compiler.ld.resolve_circular_deps: true
 
 compiler.flags.default: [compiler.flags.base, -O1]
