hw/bus/spi_stm32: Add DMA configuration for STM32G0
Bus driver for STM32 requires DMA configuration that went
missing when STM32G0 support was added

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bus/drivers/spi_stm32/pkg.yml
+++ b/hw/bus/drivers/spi_stm32/pkg.yml
@@ -42,6 +42,9 @@ pkg.deps.MCU_STM32F4:
 pkg.deps.MCU_STM32F7:
     - hw/bus/drivers/spi_stm32/stm32f7xx
 
+pkg.deps.MCU_STM32G0:
+    - hw/bus/drivers/spi_stm32/stm32g0xx
+
 pkg.deps.MCU_STM32G4:
     - hw/bus/drivers/spi_stm32/stm32g4xx
 
