tinyusb: Enable USB for STM32H7
STM32H7 uses same USB hardware block but requires
enabling voltage detector to work.

This slightly reworks code to work on all synopsys
bases devices.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/usb/tinyusb/pkg.yml
+++ b/hw/usb/tinyusb/pkg.yml
@@ -46,6 +46,8 @@ pkg.deps.'MCU_TARGET == "nRF5340_APP"':
     - "@apache-mynewt-core/hw/usb/tinyusb/nrf53"
 pkg.deps.MCU_STM32F4:
     - "@apache-mynewt-core/hw/usb/tinyusb/synopsys"
+pkg.deps.MCU_STM32H7:
+    - "@apache-mynewt-core/hw/usb/tinyusb/synopsys"
 pkg.deps.MCU_STM32F7:
     - "@apache-mynewt-core/hw/usb/tinyusb/synopsys"
 pkg.deps.MCU_STM32L4:
