hw/bsp/nordic_pca10090: Use selectable downloader
Download was not working due to missing device specifier
for jlink. Now it is corrected and nrfjprog can also
be used for flashing.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nordic_pca10090/pkg.yml
+++ b/hw/bsp/nordic_pca10090/pkg.yml
@@ -39,6 +39,7 @@ pkg.cflags.HARDFLOAT:
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf91xx"
     - "@apache-mynewt-core/libc"
+    - "@apache-mynewt-core/hw/scripts"
 
 pkg.deps.UARTBB_0:
     - "@apache-mynewt-core/hw/drivers/uart/uart_bitbang"
