--- a/hw/bsp/nordic_pca10090/bsp.yml
+++ b/hw/bsp/nordic_pca10090/bsp.yml
@@ -32,10 +32,8 @@ bsp.linkerscript.RAM_RESIDENT.OVERWRITE:
     - "hw/bsp/nordic_pca10090/boot-nrf9160.ld"
     - "@apache-mynewt-core/hw/mcu/nordic/nrf9160/nrf9160_ram_resident.ld"
 bsp.part2linkerscript: "hw/bsp/nordic_pca10090/split-nordic_pca10090.ld"
-bsp.downloadscript: "hw/bsp/nordic_pca10090/nordic_pca10090_download.sh"
+bsp.downloadscript: "hw/scripts/download.sh"
 bsp.debugscript: "hw/bsp/nordic_pca10090/nordic_pca10090_debug.sh"
-bsp.downloadscript.WINDOWS.OVERWRITE: "hw/bsp/nordic_pca10090/nordic_pca10090_download.cmd"
-bsp.debugscript.WINDOWS.OVERWRITE: "hw/bsp/nordic_pca10090/nordic_pca10090_debug.cmd"
 
 bsp.flash_map:
     areas:
