--- a/hw/bsp/nordic_pca10095/syscfg.yml
+++ b/hw/bsp/nordic_pca10095/syscfg.yml
@@ -92,7 +92,7 @@ syscfg.vals:
     FLASH_MAP_SYSINIT_STAGE: 15
 
     # Flasher parameters
-    MYNEWT_DOWNLOADER: jlink
+    MYNEWT_DOWNLOADER: nrfjprog
     JLINK_TARGET: NRF5340_XXAA_APP
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x0
 
