compiler/riscv64: Rename to make it more explicit
Compiler name was to generic and could lead to misunderstanding
of which compiler to use.
Current setting -march=rv32imac selects works with SiFive provided
compiler only.

To use this with more strict version one should use
-march=rv32imaczicsr in comman line to enable support to enable
required extension that SiFive compiler implies.

--- a/compiler/riscv64-unknown-elf-sifive/pkg.yml
+++ b/compiler/riscv64-unknown-elf-sifive/pkg.yml
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: compiler/riscv64
+pkg.name: compiler/riscv64-unknown-elf-sifive
 pkg.type: compiler
 pkg.description: Compiler definition for riscv64 gcc compiler.
 pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
