bsp/olimex-p103: Use common startup code
This change refreshes bsp:
- .cmd files removed
- bsp uses autogenerated linker script
- bsp removes fake flash areas
- local version of startup code removed

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/olimex-p103/pkg.yml
+++ b/hw/bsp/olimex-p103/pkg.yml
@@ -31,3 +31,4 @@ pkg.cflags: -DSTM32F103xB
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/stm/stm32f1xx"
     - "@apache-mynewt-core/libc"
+    - "@apache-mynewt-core/boot/startup"
