bsp/nucleo-l476rg: Use common cortex startup code
This removes local version of startup_stm32l476xx.s file
and linker script files.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nucleo-l476rg/pkg.yml
+++ b/hw/bsp/nucleo-l476rg/pkg.yml
@@ -37,3 +37,4 @@ pkg.deps:
     - "@apache-mynewt-core/hw/mcu/stm/stm32l4xx"
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/hw/scripts"
+    - "@apache-mynewt-core/boot/startup"
