hw/bsp/b-l475e-iot01a: Use common startup code
This:
- removes .cmd files that are no longer needed.
- removes local linker scripts
- removes download script and allows to use global one
- removes startup_stm32l475xx.s
- switches to use common startup and linke scripts

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/b-l475e-iot01a/pkg.yml
+++ b/hw/bsp/b-l475e-iot01a/pkg.yml
@@ -36,6 +36,8 @@ pkg.cflags.HARDFLOAT:
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/stm/stm32l4xx"
     - "@apache-mynewt-core/libc"
+    - "@apache-mynewt-core/hw/scripts"
+    - "@apache-mynewt-core/boot/startup"
 
 pkg.deps.LPS22HB_ONB:
     - "@apache-mynewt-core/hw/drivers/sensors/lps33hw"
