hw/bsp/p-nucleo-wb55: Update to use common startup code
This modifies p-nucleo-wb55 and p-nucleo-wb55-dongle to
use common startup code

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/p-nucleo-wb55-usbdongle/syscfg.yml
+++ b/hw/bsp/p-nucleo-wb55-usbdongle/syscfg.yml
@@ -36,6 +36,8 @@ syscfg.vals.BUTTON_1_AS_STM32_DFU:
     BOOT_PREBOOT: 1
 
 syscfg.vals:
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 192K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
     NFFS_FLASH_AREA: FLASH_AREA_NFFS
