--- a/hw/bsp/p-nucleo-wb55/pkg.yml
+++ b/hw/bsp/p-nucleo-wb55/pkg.yml
@@ -37,3 +37,4 @@ pkg.deps:
     - "@apache-mynewt-core/hw/mcu/stm/stm32wbxx"
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/hw/scripts"
+    - "@apache-mynewt-core/boot/startup"
